[gd_scene load_steps=4 format=3 uid="uid://ndc21kwa8x60"]

[ext_resource type="Script" uid="uid://4axiakjbo4ut" path="res://Scripts/board.gd" id="1_2wvcj"]
[ext_resource type="PackedScene" uid="uid://dlfucslspp5xo" path="res://Scenes/vine_tile_map_layer.tscn" id="2_2wvcj"]
[ext_resource type="TileSet" uid="uid://bwr60g56p7e1s" path="res://Assets/new_tile_set.tres" id="2_uh3b8"]

[node name="Board" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_2wvcj")
metadata/_custom_type_script = "uid://4axiakjbo4ut"

[node name="BackgroundTiles" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_uh3b8")

[node name="TileMapLayer1" parent="." instance=ExtResource("2_2wvcj")]

[node name="TileMapLayer2" parent="." instance=ExtResource("2_2wvcj")]

[node name="TileMapLayer3" parent="." instance=ExtResource("2_2wvcj")]

[node name="Flowers" type="Node2D" parent="."]

[node name="Portals" type="Node2D" parent="."]

[node name="Obstacles" type="Node2D" parent="."]

[connection signal="resized" from="." to="." method="_on_resized"]
